@@ -25,7 +25,6 @@
 package com.iluwatar.datatransfer.product;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The resource class which serves product information. This class act as server in the demo. Which
@@ -50,11 +49,11 @@ public class ProductResource {
    */
   public List<ProductDto.Response.Private> getAllProductsForAdmin() {
     return products
-        .stream()
-        .map(p -> new ProductDto.Response.Private().setId(p.getId()).setName(p.getName())
-            .setCost(p.getCost())
-            .setPrice(p.getPrice()))
-        .collect(Collectors.toList());
+            .stream()
+            .map(p -> new ProductDto.Response.Private().setId(p.getId()).setName(p.getName())
+                    .setCost(p.getCost())
+                    .setPrice(p.getPrice()))
+            .toList();
   }
 
   /**
@@ -64,10 +63,10 @@ public class ProductResource {
    */
   public List<ProductDto.Response.Public> getAllProductsForCustomer() {
     return products
-        .stream()
-        .map(p -> new ProductDto.Response.Public().setId(p.getId()).setName(p.getName())
-            .setPrice(p.getPrice()))
-        .collect(Collectors.toList());
+            .stream()
+            .map(p -> new ProductDto.Response.Public().setId(p.getId()).setName(p.getName())
+                    .setPrice(p.getPrice()))
+            .toList();
   }
 
   /**
@@ -76,12 +75,13 @@ public class ProductResource {
    * @param createProductDto save new product to list.
    */
   public void save(ProductDto.Request.Create createProductDto) {
-    products.add(new Product()
-        .setId((long) (products.size() + 1))
-        .setName(createProductDto.getName())
-        .setSupplier(createProductDto.getSupplier())
-        .setPrice(createProductDto.getPrice())
-        .setCost(createProductDto.getCost()));
+    products.add(Product.builder()
+            .id((long) (products.size() + 1))
+            .name(createProductDto.getName())
+            .supplier(createProductDto.getSupplier())
+            .price(createProductDto.getPrice())
+            .cost(createProductDto.getCost())
+            .build());
   }
 
   /**
